examples/google-cloud-platform/simplicite/ingress.yml
---
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simplicite-ingress
  annotations:
    kubernetes.io/ingress.class: gce
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/affinity: "cookie"
#    nginx.ingress.kubernetes.io/session-cookie-name: "route"
#    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
#    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: simplicite
          servicePort: simplicite-http
